--- a/README.Rmd
+++ b/README.Rmd
@@ -125,6 +125,10 @@ if (url.exists(stormDataURL)) {
     }
 }
 
+#
+# If for some reasons the data files should no longer be available at the original 
+# location, copies can be found here.
+# https://github.com/bjoernsteffens/stormanalysis
 
 #
 # Read the bz2 file into a data frame.
@@ -471,6 +475,11 @@ if (url.exists(stormDataURL)) {
         write.csv(date_Downloaded, file = stormDwnLdDate )
     }
 }
+
+#
+# If for some reasons the data files should no longer be available at the original 
+# location, copies can be found here.
+# https://github.com/bjoernsteffens/stormanalysis
 
 #
 # Read the bz2 file into a data frame.
